--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,13 +1,12 @@
-CC := $(CROSS_COMPILE)gcc
-CFLAGS := -g -Wall -Werror
+CFLAGS=-g -Wall -Werror
 
 all: writer
 
 writer: writer.o
-	$(CC) $(CFLAGS) -o writer writer.o
+	$(CROSS_COMPILE)$(CC) $(CFLAGS) -o writer writer.o
 
 writer.o: writer.c
-	$(CC) $(CFLAGS) -c writer.c
+	$(CROSS_COMPILE)$(CC) $(CFLAGS) -c writer.c
 
 clean:
 	rm -rf *.o *stackdump writer
