initial pass at linked list threading

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,10 +1,11 @@
 CC = $(CROSS_COMPILER)gcc
 CFLAGS += -g -Wall -Werror
+LDFLAGS += -pthread -lpthread
 
 all: aesdsocket
 
-aesdsocket: aesdsocket.c
-	$(CC) $(CFLAGS) -o aesdsocket aesdsocket.c
+aesdsocket: aesdsocket.c aesdsocket.h queue.h
+	$(CC) $(CFLAGS) $(LDFLAGS) -o aesdsocket aesdsocket.c
     
 clean: 
 	rm -rf *.o *stackdump aesdsocket
