added timestamp successfully

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,11 +1,13 @@
-CC = $(CROSS_COMPILER)gcc
-CFLAGS += -g -Wall -Werror
-LDFLAGS += -pthread -lpthread
+CC ?= $(CROSS_COMPILER)gcc
+CFLAGS ?= -g -Wall -Werror
+LDFLAGS ?= -pthread -lpthread
+TARGET ?= aesdsocket
 
 all: aesdsocket
 
 aesdsocket: aesdsocket.c aesdsocket.h queue.h
-	$(CC) $(CFLAGS) $(LDFLAGS) -o aesdsocket aesdsocket.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $(TARGET) aesdsocket.c
+
     
 clean: 
 	rm -rf *.o *stackdump aesdsocket
