got ioctl working with some updated and unfinished locking

--- a/server/Makefile
+++ b/server/Makefile
@@ -7,7 +7,9 @@ all: aesdsocket
 
 aesdsocket: aesdsocket.c aesdsocket.h queue.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $(TARGET) aesdsocket.c
-
+	
+test: ioctl_test.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o ioctlTest ioctl_test.c
     
 clean: 
-	rm -rf *.o *stackdump aesdsocket
+	rm -rf *.o *stackdump aesdsocket ioctlTest
